[package]
name = "ckb-build-info"
version = "1.1.1"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
description = "The crate `ckb-build-info` generates CKB version from the build environment"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"
rust-version = "1.95.0"

[dependencies]
