[package]
name = "ckb-metrics-config"
version = "1.1.1"
license = "MIT"
authors = ["Nervos <dev@nervos.org>"]
edition = "2024"
description = "CKB metrics configurations"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"
rust-version = "1.95.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
