[package]
name = "ckb-verification-traits"
version = "1.1.1"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
description = "The trait abstract for particular verification"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"
rust-version = "1.95.0"

[dependencies]
bitflags.workspace = true
ckb-error.workspace = true
