[package]
name = "ckb-migration-template"
version = "1.1.1"
license = "MIT"
authors = ["Nervos <dev@nervos.org>"]
edition = "2024"
description = "Provide proc-macros to setup migration"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"
rust-version = "1.95.0"

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn = { workspace = true, features = ["full", "printing"] }
